--- a/travelbox/templates/travelbox/box_create.html
+++ b/travelbox/templates/travelbox/box_create.html
@@ -41,9 +41,11 @@
       <br><br>
       숙소: <input type="text" name="accomdation"><br>
       숙소_이미지: <input type="file" name="image_accomdation"><br>
+      숙소_링크: <input type="text" name="addr_accomdation"><br>
       음식: <input type="text" name="food"><br>
       음식_이미지: <input type="file" name="image_food"><br>
       경치: <input type="text" name="sightseeing"><br>
+      <!-- 경치_주소_링크: <input type="text" name="link_sightseeing"><br> -->
       경치_이미지: <input type="file" name="image_sightseeing"><br>
       액티비티: <input type="text" name="activity"><br>
       액티비티_이미지: <input type="file" name="image_activity"><br>
