--- a/mypage/templates/mypage/login.html
+++ b/mypage/templates/mypage/login.html
@@ -92,7 +92,7 @@
                         </form>
                        
 
-                        <div class="d-grid gap-2 d-md-flex justify-content-md-end">
+                        <div class=" col-lg col-sm  gap-2 d-md-flex justify-content-md-end">
                             <button class="btn btn-lg btn-naver " type="submit">네이버 로그인</button>
                             <button class="btn btn-lg btn-kakao " type="submit"> 카카오 로그인</button>
                             <button class="btn btn-lg btn-google" type="submit">구글 로그인</button>
