--- a/travelbox/templates/travelbox/test_2.html
+++ b/travelbox/templates/travelbox/test_2.html
@@ -8,14 +8,14 @@
         <meta name="author" content="" />
         <title>travel boxxxxxxxxx</title>
         <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="{% static 'travelbox/assets/favicon.ico' %}"/>
+        <link rel="icon" type="image/x-icon" href="{% static 'assets/favicon.ico' %}"/>
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
         <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
         <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
         <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="{%static 'travelbox/css/travelbox.css'%}" rel="stylesheet" />
+        <link href="{%static 'css/test2_styles.css'%}" rel="stylesheet" />
     </head>
     <body id="page-top">
         <!-- Navigation-->
@@ -42,7 +42,7 @@
         <header class="masthead bg-primary text-white text-center">
             <div class="container d-flex align-items-center flex-column">
                 <!-- Masthead Avatar Image-->
-                {% if post.image_1 %}
+                {% if post.image_head %}
                 <img class="masthead-avatar mb-5" src="{{ post.image_head.url }}" alt="..." />
                 {% endif %}
                 <!-- Masthead Heading-->
@@ -79,7 +79,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" id="traffic" src="{% static 'travelbox/assets/cabin.png' %}" alt="..." />
+                            <img class="img-fluid" id="traffic" src="{% static 'assets/cabin.png' %}" alt="..." />
                         </div>
                     </div>
                     <!-- Portfolio Item 2-->
@@ -88,7 +88,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" id="accomdation" src="{% static 'travelbox/assets/cake.png' %}" alt="..." />
+                            <img class="img-fluid" id="accomdation" src="{% static 'assets/cake.png' %}" alt="..." />
                         </div>
                     </div>
                     <!-- Portfolio Item 3-->
@@ -97,7 +97,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" id="food" src="{% static 'travelbox/assets/circus.png' %}" alt="..." />
+                            <img class="img-fluid" id="food" src="{% static 'assets/circus.png' %}" alt="..." />
                         </div>
                     </div>
                     <!-- Portfolio Item 4-->
@@ -106,7 +106,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" id="activity" src="{% static 'travelbox/assets/game.png' %}" alt="..." />
+                            <img class="img-fluid" id="activity" src="{% static 'assets/game.png' %}" alt="..." />
                         </div>
                     </div>
                     <!-- Portfolio Item 5-->
@@ -115,7 +115,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" id="sightseeing" src="{% static 'travelbox/assets/safe.png' %}" alt="..." />
+                            <img class="img-fluid" id="sightseeing" src="{% static 'assets/safe.png' %}" alt="..." />
                         </div>
                     </div>
                     <!-- Portfolio Item 6-->
@@ -124,7 +124,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" id="mission" src="{% static 'travelbox/assets/submarine.png' %}" alt="..." />
+                            <img class="img-fluid" id="mission" src="{% static 'assets/submarine.png' %}" alt="..." />
                         </div>
                     </div>
                 </div>
@@ -136,7 +136,7 @@
                 <div class="row justify-content-center">
                     <div class="col-lg-8 col-xl-7">
                        
-                        <form action="{% url 'travelbox:travelbox' post.id %}" id="post-write"  method="post" enctype="multipart/form-data">
+                        <form action="{% url 'travelbox:test2' post.id %}" id="post-write"  method="post" enctype="multipart/form-data">
                             {% csrf_token %} 
                             <!-- <button class="btn btn-primary btn-xl disabled" id="submitButton" type="submit">Send</button> -->
                             <input class="btn btn-primary btn-xl " type="submit" value="Send">
@@ -170,7 +170,7 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="{% static 'travelbox/assets/cabin.png' %}" alt="..." />
+                                    <img class="img-fluid rounded mb-5" src="{% static 'assets/cabin.png' %}" alt="..." />
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-4">{{post.traffic}}</p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
@@ -341,21 +341,21 @@
                                     </div>
                                     
                                     <p class="mb-4">
-                                        <div id="Toggle5"> 미션이미지1 <input type="radio" name="checked" value="1"><br>
+                                        <div id="Toggle5"> 미션이미지1 <input id="rd" type="radio" form="post-write" name="checked" value="1"><br>
                                             {% if post.image_1 %}
                                             <div style="width: 250px;">
                                                 <img src="{{ post.image_1.url }}" alt="post image_1" style="width: 100%;">
                                             </div>
                                             {% endif %}
                                             <input type="file" name="user_image_1" form="post-write"><br>
-                                            미션이미지2<input type="radio " name="checked" value="2"><br>
+                                            미션이미지2<input id="rd" type="radio" form="post-write" name="checked" value="2"><br>
                                             {% if post.image_2 %}
                                             <div style="width: 250px;">
                                                 <img src="{{ post.image_2.url }}" alt="post image_2" style="width: 100%;">
                                             </div>
                                             {% endif %}
                                             <input type="file" name="user_image_2" form="post-write"><br>
-                                            미션이미지3<input type="radio" name="checked" value="3"><br>
+                                            미션이미지3<input id="rd" type="radio" name="checked" value="3" form="post-write"><br>
                                             {% if post.image_3 %}
                                             <div style="width: 250px;">
                                                 <img src="{{ post.image_3.url }}" alt="post image_3" style="width: 100%;">
@@ -379,7 +379,7 @@
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
-        <script src="js/scripts.js"></script>
+        <script src="{% static 'js/scripts.js' %}"></script>
         <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
         <!-- * *                               SB Forms JS                               * *-->
         <!-- * * Activate your form at https://startbootstrap.com/solution/contact-forms * *-->
