--- a/travelbox/templates/travelbox/test_2_.html
+++ b/travelbox/templates/travelbox/test_2_.html
@@ -8,7 +8,7 @@
         <meta name="author" content="" />
         <title>travel boxxxxxxxxx</title>
         <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="{% static 'assets/favicon.ico' %}" />
+        <link rel="icon" type="image/x-icon" href="{% static 'assets/favicon.ico' %}"/>
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
@@ -16,8 +16,6 @@
         <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="{%static 'css/test2_styles.css'%}" rel="stylesheet" />
-        <link href="{%static 'css/test2_sj.css'%}" rel="stylesheet" />
-
     </head>
     <body id="page-top">
         <!-- Navigation-->
@@ -30,12 +28,12 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto">
-                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#portfolio">교통</a></li>
-                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#about">숙소</a></li>
-                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#contact">음식</a></li>
-                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#portfolio">액티비티</a></li>
-                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#about">활동</a></li>
-                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#contact">미션</a></li>
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#traffic">교통</a></li>
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#accomdation">숙소</a></li>
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#food">음식</a></li>
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#activity">액티비티</a></li>
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#sightseeing">경치</a></li>
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#mission">미션</a></li>
                     </ul>
                 </div>
             </div>
@@ -43,21 +41,26 @@
         <!-- Masthead-->
         <header class="masthead bg-primary text-white text-center" id="headersj">
             <div id="headersjdiv">
+                <!-- Masthead Avatar Image-->
                 {% if post.image_head %}
-                <img class="masthead-avatar mb-5" src="{{ post.image_head.url }}" alt="..." style="width: 100%; height: 100%;" />
+                <img class="masthead-avatar mb-5" src="{{ post.image_head.url }}" alt="..." />
                 {% endif %}
             </div>
-            <div id="placeboxMain" class="container d-flex align-items-center flex-column" style="border-radius: 1.5rem;">
-                <!-- Masthead Avatar Image-->
+
+            <div id="placeboxMain" class="container d-flex align-items-center flex-column" style="border-radius: 1.5rem;"></div>
                 <!-- Masthead Heading-->
                 <h1 class="masthead-heading text-uppercase mb-0">{{post.place_name}}</h1>
                 <!-- Icon Divider-->
+                <div class="divider-custom divider-light">
+                    <div class="divider-custom-line"></div>
+                    <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+                    <div class="divider-custom-line"></div>
+                </div>
                 <!-- Masthead Subheading-->
-                <p class="masthead-subheading font-weight-light mb-0">
-                    {{post.sub_title}}
-                    {{post.script}}
-
-                </p>
+                <h2 class="masthead-subheading font-weight-light mb-0">{{post.sub_title}}</h2>
+                <br>
+                <p class="masthead-subheading font-weight-light mb-0">{{post.script}}</p>
+                
             </div>
         </header>
         <!-- Portfolio Section-->
@@ -79,7 +82,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="{% static 'assets/cabin.png' %}" alt="..." />
+                            <img class="img-fluid" id="traffic" src="{% static 'assets/cabin.png' %}" alt="..." />
                         </div>
                     </div>
                     <!-- Portfolio Item 2-->
@@ -88,7 +91,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="{%static 'assets/cake.png'%}" alt="..." />
+                            <img class="img-fluid" id="accomdation" src="{% static 'assets/cake.png' %}" alt="..." />
                         </div>
                     </div>
                     <!-- Portfolio Item 3-->
@@ -97,7 +100,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="{%static 'assets/circus.png'%}" alt="..." />
+                            <img class="img-fluid" id="food" src="{% static 'assets/circus.png' %}" alt="..." />
                         </div>
                     </div>
                     <!-- Portfolio Item 4-->
@@ -106,7 +109,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="{%static 'assets/game.png'%}" alt="..." />
+                            <img class="img-fluid" id="activity" src="{% static 'assets/game.png' %}" alt="..." />
                         </div>
                     </div>
                     <!-- Portfolio Item 5-->
@@ -115,7 +118,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="{%static 'assets/safe.png'%}" alt="..." />
+                            <img class="img-fluid" id="sightseeing" src="{% static 'assets/safe.png' %}" alt="..." />
                         </div>
                     </div>
                     <!-- Portfolio Item 6-->
@@ -124,56 +127,26 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="{%static 'assets/submarine.png'%}" alt="..." />
+                            <img class="img-fluid" id="mission" src="{% static 'assets/submarine.png' %}" alt="..." />
                         </div>
                     </div>
                 </div>
             </div>
         </section>
 
-
+        <section>
                 <!-- Contact Section Form-->
                 <div class="row justify-content-center">
                     <div class="col-lg-8 col-xl-7">
-                        <!-- * * * * * * * * * * * * * * *-->
-                        <!-- * * SB Forms Contact Form * *-->
-                        <!-- * * * * * * * * * * * * * * *-->
-                        <!-- This form is pre-integrated with SB Forms.-->
-                        <!-- To make this form functional, sign up at-->
-                        <!-- https://startbootstrap.com/solution/contact-forms-->
-                        <!-- to get an API token!-->
-                        <form id="contactForm" data-sb-form-api-token="API_TOKEN">
-                            <!-- Name input-->
-                           
-                            <!-- Email address input-->
-                           
-                            <!-- Phone number input-->
-                           
-                            <!-- Message input-->
-                            
-                            <!-- Submit success message-->
-                            <!---->
-                            <!-- This is what your users will see when the form-->
-                            <!-- has successfully submitted-->
-                            <div class="d-none" id="submitSuccessMessage">
-                                <div class="text-center mb-3">
-                                    <div class="fw-bolder">Form submission successful!</div>
-                                    To activate this form, sign up at
-                                    <br />
-                                    <a href="https://startbootstrap.com/solution/contact-forms">https://startbootstrap.com/solution/contact-forms</a>
-                                </div>
-                            </div>
-                            <!-- Submit error message-->
-                            <!---->
-                            <!-- This is what your users will see when there is-->
-                            <!-- an error submitting the form-->
-                            <div class="d-none" id="submitErrorMessage"><div class="text-center text-danger mb-3">Error sending message!</div></div>
-                            <!-- Submit Button-->
-                            <button class="btn btn-primary btn-xl disabled" id="submitButton" type="submit">Send</button>
+                       
+                        <form action="{% url 'travelbox:test2' post.id %}" id="post-write"  method="post" enctype="multipart/form-data">
+                            {% csrf_token %} 
+                            <!-- <button class="btn btn-primary btn-xl disabled" id="submitButton" type="submit">Send</button> -->
+                            <input class="btn btn-primary btn-xl " type="submit" value="Send">
                         </form>
                     </div>
                 </div>
-            </div>
+            
         </section>
         <!-- Footer-->
 
@@ -409,7 +382,7 @@
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
-        <script src="js/scripts.js"></script>
+        <script src="{% static 'js/scripts.js' %}"></script>
         <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
         <!-- * *                               SB Forms JS                               * *-->
         <!-- * * Activate your form at https://startbootstrap.com/solution/contact-forms * *-->
