--- a/travelbox/templates/travelbox/test_2_.html
+++ b/travelbox/templates/travelbox/test_2_.html
@@ -51,11 +51,11 @@
                 <!-- Masthead Heading-->
                 <h1 class="masthead-heading text-uppercase mb-0">{{post.place_name}}</h1>
                 <!-- Icon Divider-->
-                <div class="divider-custom divider-light">
+                <!-- <div class="divider-custom divider-light">
                     <div class="divider-custom-line"></div>
                     <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
                     <div class="divider-custom-line"></div>
-                </div>
+                </div> -->
                 <!-- Masthead Subheading-->
                 <h2 class="masthead-subheading font-weight-light mb-0">{{post.sub_title}}</h2>
                 <br>
