--- a/travelbox/static/css/test2_styles.css
+++ b/travelbox/static/css/test2_styles.css
@@ -19,6 +19,7 @@
   height: 90vh; 
   margin-top: -20vh;
   
+  
 
   
 }
@@ -29,8 +30,15 @@
   color: black; 
   background-color: white;
  
+}
 
-  
+@media (max-width: 575.98px) {
+  #headersjdiv{
+    width: 100%;
+    height: 90vh; 
+    margin-top: -20vh;
+
+}
 }
 
 
